thêm tình trạng phòng

--- a/src/view/layouts/header.html
+++ b/src/view/layouts/header.html
@@ -76,8 +76,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="../LoaiPhong/QuanLyLoaiPhong.html">
-                    <i class="fas fa-door-open"></i> <span class="menu-text"></span>
+                <a class="nav-link text-white" href="../TinhTrangPhong/QuanLyTinhTrangPhong.html">
+                    <i class="fas fa-check-circle"></i><span class="menu-text">Quản Lý Tình Trạng Phòng</span>
                 </a>
             </li>
         </ul>
