--- a/src/view/Trangchu/TrangChuAdmin.html
+++ b/src/view/Trangchu/TrangChuAdmin.html
@@ -27,10 +27,10 @@
             <tbody>
                 <tr>
                     <td>
-                        <a href="/PhongAdmin/ViewPhongAdmin.html">
+                        <a href="/Phong/roomManager.html">
                             <img src="https://i.pinimg.com/564x/ac/21/94/ac2194d022464d589cb74e8fa63c58f6.jpg" alt="Phòng">
                         </a>
-                        <a href="/PhongAdmin/ViewPhongAdmin.html" class="btn">
+                        <a href="/Phong/roomManager.html" class="btn">
                             Xem Phòng
                         </a>
                     </td>
