--- a/src/view/ProfileUser/ProfileUser.html
+++ b/src/view/ProfileUser/ProfileUser.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!--Custom CSS-->
     <link rel="stylesheet" href="../../public/css/profile.css">
+    <link rel="stylesheet" href="../../public/css/headerUser.css">
     <!--Auth Check Script-->
     <script type="module" src="../../public/js/auth/checkUserAuth.js"></script>
 
