--- a/src/view/layouts/headerUser.html
+++ b/src/view/layouts/headerUser.html
@@ -1,54 +1,94 @@
 <!--src/view/layouts/headerUser.html-->
-
-
 <header class="headerUser">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="/TrangChu/TrangChuUser.html">RESORT HAMONY</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Menu chính -->
-           
-                               <!-- Menu khách (chỉ hiện khi chưa đăng nhập) -->
-                               <ul class="navbar-nav ms-auto guest-menu">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="../LoginUser/LoginUser.html">Đăng nhập</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="../RegisterUser/RegisterUser.html">Đăng ký</a>
-                                </li>
-                            </ul>
-            
-
-                <!-- Menu user (chỉ hiện khi đã đăng nhập) -->
-                <ul class="navbar-nav ms-auto user-menu" style="display: none;">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
-                            <i class="fas fa-user"></i> <span id="userName">User</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li>
-                                <a class="dropdown-item" href="../ProfileUser/ProfileUser.html">
-                                    <i class="fas fa-id-card"></i> Thông tin cá nhân
-                                </a>
-                            </li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li>
-                                <button class="dropdown-item" id="logoutBtn" type="button">
-                                    <i class="fas fa-sign-out-alt"></i> Đăng xuất
-                                </button>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="home">
+                <a href="../Trangchu/TrangChuUser.html">
+                    <img src="../../../public/uploads/logo4.png" alt="HARMONY Logo" class="logo-home">
+                    HARMONY
+                </a>
             </div>
+          
+            <ul class="menu-navbar">
+                <li class="drop-down">
+                    <a href="#Dichvu&TienIch" class="menu-navbar-link">Dịch vụ & Tiện ích</a>
+                    <div class="mega-menu">
+                        <div class="mm-6column">
+                            <span class="left-img">
+                                <img src="https://i.pinimg.com/736x/d4/ec/ea/d4ecea051ea1c07d7e017fb1ebcca35e.jpg">
+                                <p>Các dịch vụ phổ biến</p>
+                            </span>
+                            <span class="categories-dropdown">
+                                <ul>
+                                    <span>Hoạt động & Giải trí</span>
+                                    <li><a href="#hoboi">Hồ bơi</a></li>
+                                    <li><a href="#gym">Phòng gym</a></li>
+                                    <li><a href="#thethao">Hoạt động thể thao</a></li>
+                                    <li><a href="#XemThem">Xem thêm</a></li>
+                                </ul>
+                            </span>
+                            
+                            <span class="categories-dropdown">
+                                <ul>
+                                    <span>Nhà hàng & Ẩm thực</span>
+                                    <li><a href="#nhahang">Nhà hàng cao cấp</a></li>
+                                    <li><a href="#buffet">Buffet sáng</a></li>
+                                    <li><a href="#quaybar">Quầy bar</a></li>
+                                    <li><a href="#XemThem">Xem thêm</a></li>
+                                </ul>
+                            </span>
+                            
+                            <span class="categories-dropdown">
+                                <ul>
+                                    <span>Thư giãn & Chăm sóc</span>
+                                    <li><a href="#spa">Spa trị liệu</a></li>
+                                    <li><a href="#massage">Massage thư giãn</a></li>
+                                    <li><a href="#tamthaoduoc">Tắm thảo dược</a></li>
+                                    <li><a href="#XemThem">Xem thêm</a></li>
+                                </ul>
+                            </span>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a href="#phong&gia" class="menu-navbar-link">Phòng & Giá</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#uudai&khuyenmai" class="menu-navbar-link">Ưu đãi & Khuyến mãi </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#lienhe" class="menu-navbar-link">Liên Hệ</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#gioithieu" class="menu-navbar-link">Giới Thiệu</a>
+                </li>
+
+            </ul>
+            
+            <!-- Menu user (chỉ hiện khi đã đăng nhập) -->
+            <ul class="navbar-nav user-menu" style="display: none;">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
+                        <i class="fas fa-user"></i> <span id="userName">User</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li>
+                            <a class="dropdown-item" href="../ProfileUser/ProfileUser.html">
+                                <i class="fas fa-id-card"></i> Thông tin cá nhân
+                            </a>
+                        </li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <button class="dropdown-item" id="logoutBtn" type="button">
+                                <i class="fas fa-sign-out-alt"></i> Đăng xuất
+                            </button>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
         </div>
     </nav>
 </header>
 
-<!-- Bootstrap JS -->
+<!-- Bootstrap JS cho các chức năng dropdown -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
