--- a/src/public/css/TrangChuUser.css
+++ b/src/public/css/TrangChuUser.css
@@ -1,20 +1,333 @@
+@import url("https://api.fontshare.com/v2/css?f[]=archivo@100,200,300,400,500,600,700,800,900&f[]=clash-display@200,300,400,500,600,700&display=swap");
 :root {
     --primary-color: #6c1a1a;
     --secondary-color: #f1f1f1;
-    --text-color: #333;
-    --font-primary: 'Arial', sans-serif;
-}
+    --text-color: #6c1a1a;
+    --font-family:"Playfair Display", serif;;
+/**/
+    --slide-width: min(30vw, 350px);
+	--slide-aspect: 2 / 3;
 
+	--slide-transition-duration: 800ms;
+	--slide-transition-easing: ease;
+
+	--font-archivo: "Archivo", sans-serif;
+	--font-clash-display: "Clash Display", sans-serif;
+}
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 body {
-    font-family: var(--font-primary);
-    color: var(--text-color);
+    font-family: var(--font-family);
     line-height: 1.6;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
-.container {
+html, body {
+    height: 100%;
+}
+/*logo home*/
+.logo-home{
+    height: 40px;
+    width:50px;
+}
+/*slider*/
+.slider button{
+    border: none;
+	background: none;
+	cursor: pointer;
+	&:focus {
+		outline: none;
+		border: none;
+	}
+}
+
+.slider {
+    top:0;
+	display: flex;
+	align-items: center;
+}
+
+.slider--btn {
+	--size: 40px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 0.7;
+	transition: opacity 250ms cubic-bezier(0.215, 0.61, 0.355, 1);
+	z-index: 999;
+
+	& svg {
+		width: var(--size);
+		height: var(--size);
+		stroke: white;
+	}
+
+	&:hover {
+		opacity: 1;
+	}
+}
+
+.slides__wrapper {
+	width: 100%;
+	height: 800px;
+    margin-top: 60px;
+	display: grid;
+	place-items: center;
+
+	& > * {
+		grid-area: 1 / -1;
+	}
+}
+
+.slides,
+.slides--infos {
+	width: 100%;
+	height: 100%;
+
+	pointer-events: none;
+
+	display: grid;
+	place-items: center;
+	& > * {
+		grid-area: 1 / -1;
+	}
+}
+/* ------------------------------------------------ */
+/* -------------------- SLIDE --------------------- */
+/* ------------------------------------------------ */
+
+.slide {
+	--slide-tx: 0px;
+	--slide-ty: 0vh;
+	--padding: 0px;
+	--offset: 0;
+
+	width: var(--slide-width);
+	height: auto;
+	aspect-ratio: var(--slide-aspect);
+	user-select: none;
+	perspective: 800px;
+
+	transform: perspective(1000px)
+		translate3d(var(--slide-tx), var(--slide-ty), var(--slide-tz, 0))
+		rotateY(var(--slide-rotY)) scale(var(--slide-scale));
+	transition: transform var(--slide-transition-duration)
+		var(--slide-transition-easing);
+}
+
+.slide[data-current] {
+	--slide-scale: 1.2;
+	--slide-tz: 0px;
+	--slide-tx: 0px;
+	--slide-rotY: 0;
+
+ 
+}
+
+.slide[data-next] {
+	--slide-tx: calc(1 * var(--slide-width) * 1.07);
+	--slide-rotY: -45deg;
+}
+
+.slide[data-previous] {
+	--slide-tx: calc(-1 * var(--slide-width) * 1.07);
+	--slide-rotY: 45deg;
+}
+
+.slide:not([data-current]) {
+	--slide-scale: 1;
+	--slide-tz: 0;
+	/* --slide-tx: calc(var(--offset) * var(--slide-width) * 1.05); */
+	/* --slide-rotY: calc(var(--dir) * -45deg); */
+
+	pointer-events: none;
+}
+
+.slide[data-current] {
+	& .slide--image {
+		filter: brightness(0.8);
+	}
+}
+
+.slide:not([data-current]) {
+	& .slide--image {
+		filter: brightness(0.5);
+	}
+}
+
+.slide__inner {
+	--rotX: 0;
+	--rotY: 0;
+	--bgPosX: 0%;
+	--bgPosY: 0%;
+
+	position: relative;
+	left: calc(var(--padding) / 2);
+	top: calc(var(--padding) / 2);
+	width: calc(100% - var(--padding));
+	height: calc(100% - var(--padding));
+	transform-style: preserve-3d;
+	transform: rotateX(var(--rotX)) rotateY(var(--rotY));
+}
+
+.slide--image__wrapper {
+    cursor:pointer;
+    transition: transform 0.3s ease; /* Thêm hiệu ứng mượt mà khi hover */
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+.slide--image__wrapper:hover{
+    transform: scale(1.05); /* Phóng to nhẹ khi hover */
+}
+
+.slide--image {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+   
+	top: 50%;
+	left: 50%;
+	object-fit: cover;
+	transform: translate(-50%, -50%) scale(1.25)
+		translate3d(var(--bgPosX), var(--bgPosY), 0);
+	transition: filter var(--slide-transition-duration)
+		var(--slide-transition-easing);
+}
+
+.slide__bg {
+	position: fixed;
+	inset: -20%;
+	background-image: var(--bg);
+	background-size: cover;
+	background-position: center center;
+
+	z-index: -1;
+	/* pointer-events: none; */
+
+	transition: opacity var(--slide-transition-duration) ease,
+		transform var(--slide-transition-duration) ease;
+
+	&::before {
+		content: "";
+		position: absolute;
+		inset: 0;
+	}
+
+	&::before {
+		background: rgba(0, 0, 0, 0.3);
+		backdrop-filter: blur(8px);
+	}
+
+	&:not([data-current]) {
+		opacity: 0;
+	}
+
+	&[data-previous] {
+		transform: translateX(-10%);
+	}
+
+	&[data-next] {
+		transform: translateX(10%);
+	}
+}
+
+/* ------------ SLIDE INFO ---------------- */
+
+.slide-info {
+	--padding: 0px;
+
+	position: relative;
+	width: var(--slide-width);
+	height: 100%;
+	aspect-ratio: var(--slide-aspect);
+	user-select: none;
+	perspective: 800px;
+	z-index: 100;
+}
+
+.slide-info[data-current] {
+	& .slide-info--text span {
+		opacity: 1;
+		transform: translate3d(0, 0, 0);
+		transition-delay: 250ms;
+	}
+}
+
+.slide-info:not([data-current]) {
+	& .slide-info--text span {
+		opacity: 0;
+		transform: translate3d(0, 100%, 0);
+		transition-delay: 0ms;
+	}
+}
+
+.slide-info__inner {
+	position: relative;
+	left: calc(var(--padding) / 2);
+	top: calc(var(--padding) / 2);
+	width: calc(100% - var(--padding));
+	height: calc(100% - var(--padding));
+	transform-style: preserve-3d;
+	transform: rotateX(var(--rotX)) rotateY(var(--rotY));
+}
+
+.slide-info--text__wrapper {
+	--z-offset: 45px;
+
+	position: absolute;
+	height: fit-content;
+	left: -15%;
+	bottom: 15%;
+	transform: translateZ(var(--z-offset));
+	z-index: 2;
+	pointer-events: none;
+}
+
+.slide-info--text {
+	font-family: var(--font-clash-display);
+	color: #fff;
+	overflow: hidden;
+
+	& span {
+		display: block;
+		white-space: nowrap;
+		transition: var(--slide-transition-duration) var(--slide-transition-easing);
+		transition-property: opacity, transform;
+	}
+
+	&[data-title],
+	&[data-subtitle] {
+		font-size: min(3cqw, 2.4rem);
+		font-weight: 800;
+		letter-spacing: 0.2cqw;
+		white-space: nowrap;
+		text-transform: uppercase;
+	}
+
+	&[data-subtitle] {
+		margin-left: 2cqw;
+		font-size: min(2.2cqw, 1.8rem);
+		font-weight: 600;
+	}
+
+	&[data-description] {
+		margin-left: 1cqw;
+		font-size: min(1.5cqw, 0.95rem);
+		font-family: var(--font-archivo);
+		font-weight: 300;
+	}
+}.container1 {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
+    color:#6c1a1a;
 }
 
 .slideshow-container {
@@ -84,7 +397,7 @@ body {
     padding: 50px 0;
 }
 
-    .criteria-section h2 {
+    .criteria-section h1 {
         text-align: center;
         color: var(--primary-color);
         margin-bottom: 30px;
@@ -244,38 +557,51 @@ body {
     }
 }
 /*--------------------------------------------------------
-*/
-.site-footer {
-    background-color: #333;
+*/.site-footer {
+    background-color: #6c1a1a;
     color: #fff;
-    padding: 50px 0 20px;
+    padding: 40px 0;
 }
 
 .footer-content {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: wrap;/* Dàn thành 1 dòng nếu không đủ chỗ */
+    justify-content: space-between;/* Căn giữa các phần */
+    align-items: flex-start;/* Căn trên cùng */
+    max-width: 1200px;
+    margin: 0 auto;/* Căn giữa footer */
+
 }
 
 .footer-section {
     flex: 1;
-    margin-right: 30px;
+    min-width: 250px; /* Đảm bảo không bị bóp quá nhỏ */
     margin-bottom: 30px;
 }
 
-    .footer-section h3 {
-        color: #ffffff;
-        margin-bottom: 20px;
-    }
+.footer-section h3 {
+    color: #ffffff;
+    margin-bottom: 15px;/* Khoảng cách giữa tiêu đề và nội dung */
+}
 
-    .footer-section p {
-        margin-bottom: 10px;
-    }
+.footer-section p {
+    margin-bottom: 10px;
+    line-height: 1.5;
+}
+
+.social-icons {
+    display: flex;
+    gap: 15px;
+}
 
 .social-icons a {
     color: #fff;
-    margin-right: 10px;
     font-size: 20px;
+    transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+    color: #007bff;
 }
 
 .footer-section.links ul {
@@ -283,31 +609,45 @@ body {
     padding: 0;
 }
 
-    .footer-section.links ul li {
-        margin-bottom: 10px;
-    }
+.footer-section.links ul li {
+    margin-bottom: 10px;
+}
 
-        .footer-section.links ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
+.footer-section.links ul li a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
 
+.footer-section.links ul li a:hover {
+    color: #007bff;
+}
+
+/* Form đăng ký */
 .footer-section.newsletter form {
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 .footer-section.newsletter input[type="email"] {
     flex-grow: 1;
     padding: 10px;
     border: none;
+    border-radius: 5px;
 }
 
 .footer-section.newsletter button {
-    background-color: #6c1a1a;
+    background-color: #007bff;
     color: #fff;
     border: none;
     padding: 10px 20px;
+    border-radius: 5px;
     cursor: pointer;
+}
+
+.footer-section.newsletter button:hover {
+    background-color: #0056b3;
 }
 
 .footer-bottom {
@@ -317,28 +657,23 @@ body {
     border-top: 1px solid #555;
 }
 
-@media (max-width: 768px) {
-    .footer-content {
-        flex-direction: column;
-    }
-
-    .footer-section {
-        margin-right: 0;
-    }
+.footer-bottom p {
+    margin: 0;
+    color:#fff;
 }
+
 /*scoll
 */
 a {
 	text-decoration: none;
 }
-
 .et-hero-tabs,
 .et-slide {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+ 
     position: relative;
     background: #eee;
 		text-align: center;
@@ -354,32 +689,6 @@ a {
         opacity: 0.6;
     }
 }
-
-.et-hero-tabs-container {
-    display: flex;
-    flex-direction: row;
-    position: fixed;
-    top: 56px;
-    left: 0;
-    width: 100%;
-    height: 70px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background: #fff;
-    z-index: 1000;
-}
-
-.et-hero-tabs {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative;
-    background: #eee;
-    text-align: center;
-    padding: 0 2em;
-}
-
 .et-hero-tabs h1 {
     font-size: 2rem;
     margin: 0;
@@ -431,11 +740,6 @@ a {
     background: #66B1F1;
     transition: all 0.3s ease-in-out;
 }
-
-body {
-    padding-top: 70px; 
-}
-
 .et-slide {
     min-height: 100vh;
     padding: 70px 0; /* Add padding top and bottom */
@@ -763,23 +1067,17 @@ body {
     font-weight: 600;
     white-space: nowrap;
 }
-
-
-
-
-
-/* Adjusting description area to accommodate new button position */
 .back .description {
     grid-row: 5;
     grid-column: 1/-1;
-    font-size: 0.86em;
+    font-size: 15px;
     border-radius: 5px;
     font-weight: 600;
     line-height: 1.4em;
     overflow: auto;
     color: var(--primary-color);
     padding-right: 10px;
-    margin-bottom: 1.5em;  /* Added margin to create space between description and button */
+    margin-bottom: 1.5em;  
 }
 
 .back .description ul {
@@ -810,7 +1108,7 @@ body {
 }
 
 .button {
-    grid-row: -3;  /* Changed from -1 to -2 to move it up one row */
+    grid-row: -3; 
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 600;
