xem phòng user

--- a/src/view/Trangchu/TrangChuUser.html
+++ b/src/view/Trangchu/TrangChuUser.html
@@ -239,7 +239,7 @@
                             <label for="card1" class="button return" aria-hidden="true">
                                 <i class="fas fa-arrow-left"></i>
                             </label>
-                            <a href="#DP" class="button book" aria-hidden="true">
+                            <a href="../Phong/roomUser.html" class="button book" aria-hidden="true">
                                 Xem & Đặt phòng
                             </a> 
                           
