--- a/src/view/layouts/headerUser.html
+++ b/src/view/layouts/headerUser.html
@@ -51,7 +51,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a href="#phong&gia" class="menu-navbar-link">Phòng & Giá</a>
+                    <a href="../Phong/roomUser.html" class="menu-navbar-link">Phòng & Giá</a>
                 </li>
                 <li class="nav-item">
                     <a href="#uudai&khuyenmai" class="menu-navbar-link">Ưu đãi & Khuyến mãi </a>
